--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -41,3 +41,17 @@
   margin-right: 2px;
   color: green;
 }
+.sidebarOption_channel {
+  padding: 10px 0;
+}
+
+.sidebarOption > h3 {
+  font-weight: 500;
+}
+
+.sidebar > hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-bottom: 10px;
+  padding: 13px;
+}
