--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,4 +1,5 @@
 .sidebar {
+  flex: 0.3;
   color: white;
   background-color: var(--slack-color);
   border-top: 1px solid #49274b;
@@ -53,5 +54,4 @@
   margin-top: 10px;
   margin-bottom: 10px;
   border-bottom: 10px;
-  padding: 13px;
 }
